2010-10-07
* rename unpack types in the bruteforce configuration
* replace per scan specific unpack elements with a generic "unpack" element, add
type of unpack to a new element "type", which specifies the type.
* extractprogramstrings.py: strip comments first, optionally run through
iconv first, make regex more reliable
* add public domain sed script that removes C/C++ style comments

2010-09-15
* store scanned strings to Lucene

2010-09-13
* start on a program to extract strings from sourcecode

2010-09-04
* add configuration for BusyBox 1.17.2

2010-08-18
* add configurations for BusyBox 1.17.0 and 1.17.1
* fix README for appletname-extractor.py

2010-06-17
* add configuration for BusyBox 1.16.2

2010-06-09
* add preliminary support for cramfs (only tested with little endian cramfs).
Some extra work is needed to get this to work (apply a patch, rebuild a tool),
so it is disabled by default for now.

2010-06-08
* compatibility fixes for unzip 6.0

2010-06-03
* reinstate 'magic' attribute in the configuration
* tool to extract information from the XML output and add it to knowledgebase

2010-06-02
* started work on a script to take the results from the output of the
bruteforce tool and put the results into the knowledgebase

2010-06-01
* add a simple check for hostapd
* add some more stubs for integrating the knowledgebase

2010-05-10
* add a simple check for wpa_supplicant
* use data from the knowledgebase to report additional data
* add a script to initialize a knowledgebase (sqlite) , as well as several separate
scripts to maintain the knowledgebase

2010-05-09
* add a script for creating a knowledgebase and fill it with some test data

2010-05-05
* add simple checks for iptables, iproute, dproxy, ez-ipupdate
* add simple check for libusb 0.1
* add simple check for vsftpd
* move documentation to the 'doc' directory
* document adding new checks

2010-05-04
* small speedup for BusyBox (40 characters should be enough for the BusyBox
version number)